// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should have available networks 1`] = `
Object {
  "coin": "ARK",
  "constants": Object {
    "slip44": 111,
  },
  "currency": Object {
    "symbol": "Ѧ",
    "ticker": "ARK",
  },
  "featureFlags": Object {
    "Client": Array [
      "transaction",
      "transactions",
      "wallet",
      "wallets",
      "delegate",
      "delegates",
      "votes",
      "voters",
      "configuration",
      "fees",
      "syncing",
      "broadcast",
    ],
    "Fee": Array [
      "all",
    ],
    "Identity": Array [
      "address.mnemonic.bip39",
      "address.multiSignature",
      "address.privateKey",
      "address.publicKey",
      "address.validate",
      "address.wif",
      "keyPair.mnemonic.bip39",
      "keyPair.privateKey",
      "keyPair.wif",
      "privateKey.mnemonic.bip39",
      "privateKey.wif",
      "publicKey.mnemonic.bip39",
      "publicKey.multiSignature",
      "publicKey.wif",
      "wif.mnemonic.bip39",
    ],
    "Ledger": Array [
      "getVersion",
      "getPublicKey",
      "signTransaction",
      "signMessage",
    ],
    "Link": Array [
      "block",
      "transaction",
      "wallet",
    ],
    "Message": Array [
      "sign",
      "verify",
    ],
    "Peer": Array [
      "validate",
    ],
    "Transaction": Array [
      "delegateRegistration",
      "delegateResignation",
      "ipfs.ledgerS",
      "ipfs.ledgerX",
      "ipfs.musig",
      "ipfs",
      "multiPayment.ledgerS",
      "multiPayment.ledgerX",
      "multiPayment.musig",
      "multiPayment",
      "multiSignature.ledgerS",
      "multiSignature.ledgerX",
      "multiSignature.musig",
      "multiSignature",
      "secondSignature",
      "transfer.ledgerS",
      "transfer.ledgerX",
      "transfer.musig",
      "transfer",
      "vote.ledgerS",
      "vote.ledgerX",
      "vote.musig",
      "vote",
    ],
  },
  "governance": Object {
    "delegateCount": 51,
    "votesPerTransaction": 1,
    "votesPerWallet": 1,
  },
  "hosts": Array [
    Object {
      "host": "https://wallets.ark.io/api",
      "type": "full",
    },
    Object {
      "host": "https://musig1.ark.io",
      "type": "musig",
    },
    Object {
      "host": "https://explorer.ark.io",
      "type": "explorer",
    },
  ],
  "id": "ark.mainnet",
  "importMethods": Object {
    "address": Object {
      "default": false,
      "permissions": Array [
        "read",
      ],
    },
    "bip39": Object {
      "default": true,
      "permissions": Array [
        "read",
        "write",
      ],
    },
    "publicKey": Object {
      "default": false,
      "permissions": Array [
        "read",
      ],
    },
  },
  "knownWallets": "https://raw.githubusercontent.com/ArkEcosystem/common/master/mainnet/known-wallets-extended.json",
  "meta": Object {
    "fastDelegateSync": true,
  },
  "name": "Mainnet",
  "transactions": Object {
    "expirationType": "height",
    "fees": Object {
      "ticker": "ARK",
      "type": "dynamic",
    },
    "memo": true,
    "types": Array [
      "delegate-registration",
      "delegate-resignation",
      "htlc-claim",
      "htlc-lock",
      "htlc-refund",
      "ipfs",
      "multi-payment",
      "multi-signature",
      "second-signature",
      "transfer",
      "vote",
    ],
  },
  "type": "live",
}
`;

exports[`should have available networks 2`] = `
Object {
  "coin": "DARK",
  "constants": Object {
    "slip44": 1,
  },
  "currency": Object {
    "symbol": "DѦ",
    "ticker": "DARK",
  },
  "featureFlags": Object {
    "Client": Array [
      "transaction",
      "transactions",
      "wallet",
      "wallets",
      "delegate",
      "delegates",
      "votes",
      "voters",
      "configuration",
      "fees",
      "syncing",
      "broadcast",
    ],
    "Fee": Array [
      "all",
    ],
    "Identity": Array [
      "address.mnemonic.bip39",
      "address.multiSignature",
      "address.privateKey",
      "address.publicKey",
      "address.validate",
      "address.wif",
      "keyPair.mnemonic.bip39",
      "keyPair.privateKey",
      "keyPair.wif",
      "privateKey.mnemonic.bip39",
      "privateKey.wif",
      "publicKey.mnemonic.bip39",
      "publicKey.multiSignature",
      "publicKey.wif",
      "wif.mnemonic.bip39",
    ],
    "Ledger": Array [
      "getVersion",
      "getPublicKey",
      "signTransaction",
      "signMessage",
    ],
    "Link": Array [
      "block",
      "transaction",
      "wallet",
    ],
    "Message": Array [
      "sign",
      "verify",
    ],
    "Peer": Array [
      "validate",
    ],
    "Transaction": Array [
      "delegateRegistration",
      "delegateResignation",
      "ipfs.ledgerS",
      "ipfs.ledgerX",
      "ipfs.musig",
      "ipfs",
      "multiPayment.ledgerS",
      "multiPayment.ledgerX",
      "multiPayment.musig",
      "multiPayment",
      "multiSignature.ledgerS",
      "multiSignature.ledgerX",
      "multiSignature.musig",
      "multiSignature",
      "secondSignature",
      "transfer.ledgerS",
      "transfer.ledgerX",
      "transfer.musig",
      "transfer",
      "vote.ledgerS",
      "vote.ledgerX",
      "vote.musig",
      "vote",
    ],
  },
  "governance": Object {
    "delegateCount": 51,
    "votesPerTransaction": 1,
    "votesPerWallet": 1,
  },
  "hosts": Array [
    Object {
      "host": "https://dwallets.ark.io/api",
      "type": "full",
    },
    Object {
      "host": "https://dmusig1.ark.io",
      "type": "musig",
    },
    Object {
      "host": "https://dexplorer.ark.io",
      "type": "explorer",
    },
  ],
  "id": "ark.devnet",
  "importMethods": Object {
    "address": Object {
      "default": false,
      "permissions": Array [
        "read",
      ],
    },
    "bip39": Object {
      "default": true,
      "permissions": Array [
        "read",
        "write",
      ],
    },
    "publicKey": Object {
      "default": false,
      "permissions": Array [
        "read",
      ],
    },
  },
  "knownWallets": "https://raw.githubusercontent.com/ArkEcosystem/common/master/devnet/known-wallets-extended.json",
  "meta": Object {
    "fastDelegateSync": true,
  },
  "name": "Devnet",
  "transactions": Object {
    "expirationType": "height",
    "fees": Object {
      "ticker": "DARK",
      "type": "dynamic",
    },
    "memo": true,
    "types": Array [
      "delegate-registration",
      "delegate-resignation",
      "htlc-claim",
      "htlc-lock",
      "htlc-refund",
      "ipfs",
      "multi-payment",
      "multi-signature",
      "second-signature",
      "transfer",
      "vote",
    ],
  },
  "type": "test",
}
`;

exports[`should have available networks 3`] = `
Object {
  "coin": "Compendia",
  "constants": Object {
    "slip44": 543,
  },
  "currency": Object {
    "symbol": "ß",
    "ticker": "BIND",
  },
  "featureFlags": Object {
    "Client": Array [
      "transaction",
      "transactions",
      "wallet",
      "wallets",
      "delegate",
      "delegates",
      "votes",
      "voters",
      "configuration",
      "fees",
      "syncing",
      "broadcast",
    ],
    "Fee": Array [
      "all",
    ],
    "Identity": Array [
      "address.mnemonic.bip39",
      "address.multiSignature",
      "address.privateKey",
      "address.publicKey",
      "address.validate",
      "address.wif",
      "keyPair.mnemonic.bip39",
      "keyPair.privateKey",
      "keyPair.wif",
      "privateKey.mnemonic.bip39",
      "privateKey.wif",
      "publicKey.mnemonic.bip39",
      "publicKey.multiSignature",
      "publicKey.wif",
      "wif.mnemonic.bip39",
    ],
    "Ledger": Array [
      "getVersion",
      "getPublicKey",
      "signTransaction",
      "signMessage",
    ],
    "Link": Array [
      "block",
      "transaction",
      "wallet",
    ],
    "Message": Array [
      "sign",
      "verify",
    ],
    "Peer": Array [
      "validate",
    ],
    "Transaction": Array [
      "delegateRegistration",
      "delegateResignation",
      "ipfs.ledgerS",
      "ipfs.ledgerX",
      "ipfs.musig",
      "ipfs",
      "multiPayment.ledgerS",
      "multiPayment.ledgerX",
      "multiPayment.musig",
      "multiPayment",
      "multiSignature.ledgerS",
      "multiSignature.ledgerX",
      "multiSignature.musig",
      "multiSignature",
      "secondSignature",
      "transfer.ledgerS",
      "transfer.ledgerX",
      "transfer.musig",
      "transfer",
      "vote.ledgerS",
      "vote.ledgerX",
      "vote.musig",
      "vote",
    ],
  },
  "governance": Object {
    "delegateCount": 47,
    "votesPerTransaction": 1,
    "votesPerWallet": 1,
  },
  "hosts": Array [
    Object {
      "host": "https://apis.compendia.org",
      "type": "full",
    },
    Object {
      "host": "https://bindscan.io",
      "type": "explorer",
    },
  ],
  "id": "compendia.mainnet",
  "importMethods": Object {
    "address": Object {
      "default": false,
      "permissions": Array [
        "read",
      ],
    },
    "bip39": Object {
      "default": true,
      "permissions": Array [
        "read",
        "write",
      ],
    },
    "publicKey": Object {
      "default": false,
      "permissions": Array [
        "read",
      ],
    },
  },
  "meta": Object {
    "fastDelegateSync": true,
  },
  "name": "Mainnet",
  "transactions": Object {
    "expirationType": "height",
    "fees": Object {
      "ticker": "BIND",
      "type": "dynamic",
    },
    "memo": true,
    "types": Array [
      "delegate-registration",
      "delegate-resignation",
      "htlc-claim",
      "htlc-lock",
      "htlc-refund",
      "ipfs",
      "multi-payment",
      "multi-signature",
      "second-signature",
      "transfer",
      "vote",
    ],
  },
  "type": "live",
}
`;

exports[`should have available networks 4`] = `
Object {
  "coin": "Bitcoin",
  "constants": Object {
    "slip44": 0,
  },
  "currency": Object {
    "symbol": "Ƀ",
    "ticker": "BTC",
  },
  "featureFlags": Object {
    "Client": Array [
      "transaction",
      "wallet",
      "broadcast",
    ],
    "Fee": Array [
      "all",
    ],
    "Identity": Array [
      "address.mnemonic.bip39",
      "address.mnemonic.bip44",
      "address.mnemonic.bip49",
      "address.mnemonic.bip84",
      "address.privateKey",
      "address.publicKey",
      "address.validate",
      "address.wif",
      "keyPair.mnemonic.bip39",
      "keyPair.mnemonic.bip44",
      "keyPair.mnemonic.bip49",
      "keyPair.mnemonic.bip84",
      "keyPair.privateKey",
      "keyPair.wif",
      "privateKey.mnemonic.bip39",
      "privateKey.mnemonic.bip44",
      "privateKey.mnemonic.bip49",
      "privateKey.mnemonic.bip84",
      "privateKey.wif",
      "publicKey.mnemonic.bip39",
      "publicKey.mnemonic.bip44",
      "publicKey.mnemonic.bip49",
      "publicKey.mnemonic.bip84",
      "publicKey.wif",
      "wif.mnemonic.bip39",
      "wif.mnemonic.bip44",
      "wif.mnemonic.bip49",
      "wif.mnemonic.bip84",
    ],
    "Link": Array [
      "block",
      "transaction",
      "wallet",
    ],
    "Message": Array [
      "sign",
      "verify",
    ],
    "Peer": Array [
      "validate",
    ],
    "Transaction": Array [
      "transfer",
    ],
  },
  "hosts": Array [
    Object {
      "host": "https://coins.com/api/btc",
      "type": "full",
    },
    Object {
      "host": "https://blockstream.info/",
      "type": "explorer",
    },
  ],
  "id": "btc.livenet",
  "importMethods": Object {
    "address": Object {
      "default": false,
      "permissions": Array [
        "read",
      ],
    },
    "bip39": Object {
      "default": true,
      "permissions": Array [
        "read",
        "write",
      ],
    },
    "bip44": Object {
      "default": true,
      "permissions": Array [
        "read",
        "write",
      ],
    },
    "bip49": Object {
      "default": true,
      "permissions": Array [
        "read",
        "write",
      ],
    },
    "bip84": Object {
      "default": true,
      "permissions": Array [
        "read",
        "write",
      ],
    },
    "publicKey": Object {
      "default": false,
      "permissions": Array [
        "read",
      ],
    },
  },
  "name": "Livenet",
  "transactions": Object {
    "expirationType": "height",
    "fees": Object {
      "ticker": "BTC",
      "type": "dynamic",
    },
    "types": Array [
      "transfer",
    ],
    "utxo": true,
  },
  "type": "live",
}
`;

exports[`should have available networks 5`] = `
Object {
  "coin": "Bitcoin",
  "constants": Object {
    "slip44": 0,
  },
  "currency": Object {
    "symbol": "Ƀ",
    "ticker": "BTC",
  },
  "featureFlags": Object {
    "Client": Array [
      "transaction",
      "wallet",
      "broadcast",
    ],
    "Fee": Array [
      "all",
    ],
    "Identity": Array [
      "address.mnemonic.bip39",
      "address.mnemonic.bip44",
      "address.mnemonic.bip49",
      "address.mnemonic.bip84",
      "address.privateKey",
      "address.publicKey",
      "address.validate",
      "address.wif",
      "keyPair.mnemonic.bip39",
      "keyPair.mnemonic.bip44",
      "keyPair.mnemonic.bip49",
      "keyPair.mnemonic.bip84",
      "keyPair.privateKey",
      "keyPair.wif",
      "privateKey.mnemonic.bip39",
      "privateKey.mnemonic.bip44",
      "privateKey.mnemonic.bip49",
      "privateKey.mnemonic.bip84",
      "privateKey.wif",
      "publicKey.mnemonic.bip39",
      "publicKey.mnemonic.bip44",
      "publicKey.mnemonic.bip49",
      "publicKey.mnemonic.bip84",
      "publicKey.wif",
      "wif.mnemonic.bip39",
      "wif.mnemonic.bip44",
      "wif.mnemonic.bip49",
      "wif.mnemonic.bip84",
    ],
    "Link": Array [
      "block",
      "transaction",
      "wallet",
    ],
    "Message": Array [
      "sign",
      "verify",
    ],
    "Peer": Array [
      "validate",
    ],
    "Transaction": Array [
      "transfer",
    ],
  },
  "hosts": Array [
    Object {
      "host": "https://coins.com/api/btc",
      "type": "full",
    },
    Object {
      "host": "https://blockstream.info/testnet/",
      "type": "explorer",
    },
  ],
  "id": "btc.testnet",
  "importMethods": Object {
    "address": Object {
      "default": false,
      "permissions": Array [
        "read",
      ],
    },
    "bip39": Object {
      "default": true,
      "permissions": Array [
        "read",
        "write",
      ],
    },
    "bip44": Object {
      "default": true,
      "permissions": Array [
        "read",
        "write",
      ],
    },
    "bip49": Object {
      "default": true,
      "permissions": Array [
        "read",
        "write",
      ],
    },
    "bip84": Object {
      "default": true,
      "permissions": Array [
        "read",
        "write",
      ],
    },
    "publicKey": Object {
      "default": false,
      "permissions": Array [
        "read",
      ],
    },
  },
  "name": "Testnet",
  "transactions": Object {
    "expirationType": "height",
    "fees": Object {
      "ticker": "BTC",
      "type": "dynamic",
    },
    "types": Array [
      "transfer",
    ],
    "utxo": true,
  },
  "type": "test",
}
`;

exports[`should have available networks 6`] = `
Object {
  "coin": "Ethereum",
  "constants": Object {
    "slip44": 60,
  },
  "currency": Object {
    "symbol": "Ξ",
    "ticker": "ETH",
  },
  "featureFlags": Object {
    "Client": Array [
      "transaction",
      "transactions",
      "wallet",
      "broadcast",
    ],
    "Fee": Array [
      "all",
    ],
    "Identity": Array [
      "address.mnemonic.bip44",
      "address.privateKey",
      "address.publicKey",
      "address.validate",
      "keyPair.privateKey",
      "privateKey.mnemonic.bip44",
      "publicKey.mnemonic.bip44",
    ],
    "Link": Array [
      "block",
      "transaction",
      "wallet",
    ],
    "Message": Array [
      "sign",
      "verify",
    ],
    "Peer": Array [
      "validate",
    ],
    "Transaction": Array [
      "transfer",
    ],
  },
  "hosts": Array [
    Object {
      "host": "https://platform.ark.io/api/eth",
      "type": "full",
    },
    Object {
      "host": "https://etherscan.io/",
      "type": "explorer",
    },
  ],
  "id": "eth.mainnet",
  "importMethods": Object {
    "address": Object {
      "default": false,
      "permissions": Array [
        "read",
      ],
    },
    "bip44": Object {
      "default": true,
      "permissions": Array [
        "read",
        "write",
      ],
    },
    "publicKey": Object {
      "default": false,
      "permissions": Array [
        "read",
      ],
    },
  },
  "meta": Object {
    "networkId": "1",
  },
  "name": "Mainnet",
  "transactions": Object {
    "expirationType": "height",
    "fees": Object {
      "ticker": "ETH",
      "type": "gas",
    },
    "memo": true,
    "types": Array [
      "transfer",
    ],
  },
  "type": "live",
}
`;

exports[`should have available networks 7`] = `
Object {
  "coin": "Ethereum",
  "constants": Object {
    "slip44": 60,
  },
  "currency": Object {
    "symbol": "Ξ",
    "ticker": "ETH",
  },
  "featureFlags": Object {
    "Client": Array [
      "transaction",
      "transactions",
      "wallet",
      "broadcast",
    ],
    "Fee": Array [
      "all",
    ],
    "Identity": Array [
      "address.mnemonic.bip44",
      "address.privateKey",
      "address.publicKey",
      "address.validate",
      "keyPair.privateKey",
      "privateKey.mnemonic.bip44",
      "publicKey.mnemonic.bip44",
    ],
    "Link": Array [
      "block",
      "transaction",
      "wallet",
    ],
    "Message": Array [
      "sign",
      "verify",
    ],
    "Peer": Array [
      "validate",
    ],
    "Transaction": Array [
      "transfer",
    ],
  },
  "hosts": Array [
    Object {
      "host": "https://coins.com/api/eth",
      "type": "full",
    },
    Object {
      "host": "https://kovan.etherscan.io/",
      "type": "explorer",
    },
  ],
  "id": "eth.kovan",
  "importMethods": Object {
    "address": Object {
      "default": false,
      "permissions": Array [
        "read",
      ],
    },
    "bip44": Object {
      "default": true,
      "permissions": Array [
        "read",
        "write",
      ],
    },
    "publicKey": Object {
      "default": false,
      "permissions": Array [
        "read",
      ],
    },
  },
  "meta": Object {
    "networkId": "2",
  },
  "name": "Kovan",
  "transactions": Object {
    "expirationType": "height",
    "fees": Object {
      "ticker": "ETH",
      "type": "gas",
    },
    "memo": true,
    "types": Array [
      "transfer",
    ],
  },
  "type": "test",
}
`;

exports[`should have available networks 8`] = `
Object {
  "coin": "Ethereum",
  "constants": Object {
    "slip44": 60,
  },
  "currency": Object {
    "symbol": "Ξ",
    "ticker": "ETH",
  },
  "featureFlags": Object {
    "Client": Array [
      "transaction",
      "transactions",
      "wallet",
      "broadcast",
    ],
    "Fee": Array [
      "all",
    ],
    "Identity": Array [
      "address.mnemonic.bip44",
      "address.privateKey",
      "address.publicKey",
      "address.validate",
      "keyPair.privateKey",
      "privateKey.mnemonic.bip44",
      "publicKey.mnemonic.bip44",
    ],
    "Link": Array [
      "block",
      "transaction",
      "wallet",
    ],
    "Message": Array [
      "sign",
      "verify",
    ],
    "Peer": Array [
      "validate",
    ],
    "Transaction": Array [
      "transfer",
    ],
  },
  "hosts": Array [
    Object {
      "host": "https://platform.ark.io/api/eth",
      "type": "full",
    },
    Object {
      "host": "https://ropsten.etherscan.io/",
      "type": "explorer",
    },
  ],
  "id": "eth.ropsten",
  "importMethods": Object {
    "address": Object {
      "default": false,
      "permissions": Array [
        "read",
      ],
    },
    "bip44": Object {
      "default": true,
      "permissions": Array [
        "read",
        "write",
      ],
    },
    "publicKey": Object {
      "default": false,
      "permissions": Array [
        "read",
      ],
    },
  },
  "meta": Object {
    "networkId": "3",
  },
  "name": "Ropsten",
  "transactions": Object {
    "expirationType": "height",
    "fees": Object {
      "ticker": "ETH",
      "type": "gas",
    },
    "memo": true,
    "types": Array [
      "transfer",
    ],
  },
  "type": "test",
}
`;

exports[`should have available networks 9`] = `
Object {
  "coin": "Ethereum",
  "constants": Object {
    "slip44": 60,
  },
  "currency": Object {
    "symbol": "Ξ",
    "ticker": "ETH",
  },
  "featureFlags": Object {
    "Client": Array [
      "transaction",
      "transactions",
      "wallet",
      "broadcast",
    ],
    "Fee": Array [
      "all",
    ],
    "Identity": Array [
      "address.mnemonic.bip44",
      "address.privateKey",
      "address.publicKey",
      "address.validate",
      "keyPair.privateKey",
      "privateKey.mnemonic.bip44",
      "publicKey.mnemonic.bip44",
    ],
    "Link": Array [
      "block",
      "transaction",
      "wallet",
    ],
    "Message": Array [
      "sign",
      "verify",
    ],
    "Peer": Array [
      "validate",
    ],
    "Transaction": Array [
      "transfer",
    ],
  },
  "hosts": Array [
    Object {
      "host": "https://platform.ark.io/api/eth",
      "type": "full",
    },
    Object {
      "host": "https://rinkeby.etherscan.io/",
      "type": "explorer",
    },
  ],
  "id": "eth.rinkeby",
  "importMethods": Object {
    "address": Object {
      "default": false,
      "permissions": Array [
        "read",
      ],
    },
    "bip44": Object {
      "default": true,
      "permissions": Array [
        "read",
        "write",
      ],
    },
    "publicKey": Object {
      "default": false,
      "permissions": Array [
        "read",
      ],
    },
  },
  "meta": Object {
    "networkId": "4",
  },
  "name": "Rinkeby",
  "transactions": Object {
    "expirationType": "height",
    "fees": Object {
      "ticker": "ETH",
      "type": "gas",
    },
    "memo": true,
    "types": Array [
      "transfer",
    ],
  },
  "type": "test",
}
`;

exports[`should have available networks 10`] = `
Object {
  "coin": "Ethereum",
  "constants": Object {
    "slip44": 60,
  },
  "currency": Object {
    "symbol": "Ξ",
    "ticker": "ETH",
  },
  "featureFlags": Object {
    "Client": Array [
      "transaction",
      "transactions",
      "wallet",
      "broadcast",
    ],
    "Fee": Array [
      "all",
    ],
    "Identity": Array [
      "address.mnemonic.bip44",
      "address.privateKey",
      "address.publicKey",
      "address.validate",
      "keyPair.privateKey",
      "privateKey.mnemonic.bip44",
      "publicKey.mnemonic.bip44",
    ],
    "Link": Array [
      "block",
      "transaction",
      "wallet",
    ],
    "Message": Array [
      "sign",
      "verify",
    ],
    "Peer": Array [
      "validate",
    ],
    "Transaction": Array [
      "transfer",
    ],
  },
  "hosts": Array [
    Object {
      "host": "https://coins.com/api/eth",
      "type": "full",
    },
    Object {
      "host": "https://goerli.etherscan.io/",
      "type": "explorer",
    },
  ],
  "id": "eth.goerli",
  "importMethods": Object {
    "address": Object {
      "default": false,
      "permissions": Array [
        "read",
      ],
    },
    "bip44": Object {
      "default": true,
      "permissions": Array [
        "read",
        "write",
      ],
    },
    "publicKey": Object {
      "default": false,
      "permissions": Array [
        "read",
      ],
    },
  },
  "meta": Object {
    "networkId": "5",
  },
  "name": "Goerli",
  "transactions": Object {
    "expirationType": "height",
    "fees": Object {
      "ticker": "ETH",
      "type": "gas",
    },
    "memo": true,
    "types": Array [
      "transfer",
    ],
  },
  "type": "test",
}
`;
